[gd_scene load_steps=14 format=2]

[ext_resource path="res://Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board.gd" type="Script" id=4]
[ext_resource path="res://Deck.gd" type="Script" id=5]
[ext_resource path="res://Bank.gd" type="Script" id=6]
[ext_resource path="res://Employment.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/Background.jpg" type="Texture" id=9]
[ext_resource path="res://images/Bank.png" type="Texture" id=10]
[ext_resource path="res://OpponentInfo.tscn" type="PackedScene" id=11]
[ext_resource path="res://AnyCardEnlarge.tscn" type="PackedScene" id=12]
[ext_resource path="res://Skill.gd" type="Script" id=13]
[ext_resource path="res://ButtonScript.tscn" type="PackedScene" id=14]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 136.667, 637.768, 0, 0, 0, 0, 137.659, 115.716, 0, 0, 0, 0, 1288.23, 115.716, 0, 0, 0, 0, 1289.22, 637.768 )
}

[node name="Board" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 720, 526 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Bank" type="Sprite" parent="."]
position = Vector2( 430, 340 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
script = ExtResource( 6 )

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 1008, 340 )
script = ExtResource( 5 )

[node name="Opponent1" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent2" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent3" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent4" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent5" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent6" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent7" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="Opponent8" parent="." instance=ExtResource( 11 )]
position = Vector2( 119, -112 )

[node name="OpponentPath2D" type="Path2D" parent="."]
position = Vector2( -10.7869, 10.1468 )
scale = Vector2( 1.0082, 0.87156 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="OpponentPath2D"]
position = Vector2( 401.072, 115.716 )
rotation = 3.76912e-06
offset = 783.189

[node name="Player" parent="." instance=ExtResource( 8 )]

[node name="Employment" parent="." instance=ExtResource( 7 )]
position = Vector2( 719, 530 )

[node name="AnyCardEnlarge" parent="." instance=ExtResource( 12 )]

[node name="ButtonScript" parent="." instance=ExtResource( 14 )]
position = Vector2( 0, -1 )

[node name="Skill" type="Node2D" parent="."]
script = ExtResource( 13 )
